--- a/plugin.xml
+++ b/plugin.xml
@@ -60,7 +60,7 @@
     </platform>
 
     <!-- ios -->
-    <!--<platform name="ios">-->
+    <platform name="ios">
         <!--<config-file target="config.xml" parent="/*">-->
             <!--<feature name="Device">-->
                 <!--<param name="ios-package" value="CDVDevice"/>-->
@@ -69,7 +69,8 @@
 
         <!--<header-file src="src/ios/CDVDevice.h" />-->
         <!--<source-file src="src/ios/CDVDevice.m" />-->
-    <!--</platform>-->
+        <framework src="GoogleMobileAdsMediationAdColony" type="podspec"/>
+    </platform>
 
 
 
